Update blueprint so it works for annouceemnt too (And continued conversation)

--- a/blueprints/automation/perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
+++ b/blueprints/automation/perso/reduce_volume_of_media_player_when_voice_assistant_listening_v2.yaml
@@ -40,7 +40,9 @@ blueprint:
 triggers:
   - trigger: state
     entity_id: !input assist_satellite_entity
-    to: "listening"
+    to:
+      - "listening"
+      - "responding"
 
 actions:
   - variables:
@@ -121,6 +123,7 @@ actions:
       - trigger: state
         entity_id: !input assist_satellite_entity
         to: idle
+        for: 1
     timeout:
       hours: 0
       minutes: 1
@@ -139,3 +142,4 @@ actions:
               entity_id: "{{repeat.item.entity_id}}"
 
 mode: single
+max_exceeded: silent
